--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.DMS" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+<!--    <style name="Theme.DMS" parent="Theme.MaterialComponents.DayNight.DarkActionBar">-->
+<!--    <style name="Theme.DMS" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">-->
+    <style name="Theme.DMS" parent="Theme.Material3.Light.NoActionBar">
+
+
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
