--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.DMS" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.DMS" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -13,4 +13,24 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+
+    <style name="TextValidationError" parent="TextAppearance.Design.Error">
+        <item name="android:textSize">18sp</item>
+
+    </style>
+
+
+
+    <style name="ButtonPrimaryTheme">
+        <item name="android:textSize">20sp</item>
+        <item name="android:backgroundTint">@color/colorPrimary</item>
+        <item name="cornerRadius">24dp</item>
+        <item name="elevation">16dp</item>
+        <item name="rippleColor">@color/white</item>
+        <item name="strokeColor">@color/colorSecondary</item>
+    </style>
+
+
+
 </resources>
